Creating test_migrate using c11n_migrate module.

--- a/eminent_migrate/eminent_migrate.info.yml
+++ b/eminent_migrate/eminent_migrate.info.yml
@@ -1,6 +1,6 @@
-name: Custom Migrate
+name: Eminent Migrate
 type: module
-description: Altered version of Eminent Migrate
+description: Eminent Migrate
 core: 8.x
 package: Migration
 dependencies:
