--- a/test_migrate/config/install/migrate_plus.migration.case_studies_testing.yml
+++ b/test_migrate/config/install/migrate_plus.migration.case_studies_testing.yml
@@ -4,7 +4,7 @@
 #
 # Usually the ID indicates what we are trying to migrate.
 # In our case, we are migrating nodes of type "case_studies".
-id: case_studies_testing_00
+id: case_studies_testing_02
 # Human-readable name of the migration for the UI.
 label: Case Studies Test 00.
 # Migration group.
@@ -36,9 +36,9 @@ source:
   # source plugin with the identifier "csv".
   plugin: csv
   # Specify the delimiter of the CSV data source. By default its ','.
-  delimiter: |||
+  delimiter: '|'
   # Specify the path to the CSV data source.
-  path: 'public://import/case_studies/case_studies_testing.csv'
+  path: 'public://import/case_studies/case_studies_altered.csv'
   # Number of rows at the beginning which are not actual data.
   header_row_count: 1
   # Unique ID.
@@ -57,45 +57,19 @@ source:
   # is the property name and the value is a string describing what
   # the property is all about.
   fields:
-    vid: Version ID
-    uid: User ID
-    title: Title
-    log: Logs
-    status: Status
-    comment: Comment
-    promote: Promote
-    sticky: Sticky
-    vuuid: Vuuid
-    nid: Node ID
-    type: Type
-    language: Language
-    created: Created Date
-    changed: Changed Date
-    tnid: tnid
-    translate: translate
-    uuid: uuid
-    revision_timestamp: revision timestamp
-    revision_uid: revision uid
-    body: body
-    field_image: Image
-    field_project_reference: Project Reference
-    field_weight: Weight
-    title_field: title field
-    field_display_image_style_cs: Image style display
-    field_facebook_thumbnail_cs: Facebook thumbnail
-    title_original: Original title
-    rdf_mapping: RDF mapping
-    cid: cid
-    last_comment_timestamp: Last Comment timestamp
-    last_comment_name: Last Comment name
-    last_comment_uid: Last comment uid
-    comment_count: Comment count
-    domains: Domains
-    domain_site: Domain site
-    subdomains: Subdomains
-    name: Name.
-    picture: Picture
-    data: Data
+    nid: Lorem Ipsum
+    vid: Lorem Ipsum
+    type: Lorem Ipsum
+    langcode: Lorem Ipsum
+    status: Lorem Ipsum
+    title: Lorem Ipsum
+    uid: Lorem Ipsum
+    created: Lorem Ipsum
+    changed: Lorem Ipsum
+    promote: Lorem Ipsum
+    sticky: Lorem Ipsum
+    default_langcode: Lorem Ipsum
+    revision_translation_affected: Lorem Ipsum
   # Static values for the migration.
   #
   # We can assign hard-coded values to certain properties using constants.
@@ -125,11 +99,17 @@ process:
   # as the node title. Not specifying a plugin name results in
   # the usage of the plugin "get" which simply copies the source
   # property value to the destination property.
+  nid: nid
+  vid: vid
+  type: type
+  langcode: langcode
+  status: status
   title: title
-  # Same for sticky, promote and uid fields.
-  sticky: sticky
-  promote: promote
   uid: uid
+  created: created
+  changed: changed
+  promote: promote
+  sticky: sticky
   # Some fields have multiple properties! For example, the "body" field
   # can have the actual full text, a summary, etc. Values can be
   # assigned to specific properties using the syntax used below. We
@@ -142,7 +122,7 @@ process:
   # supported by various fields.
   #
   # Reference: https://www.drupal.org/node/2630732
-  'body/value': Body
+  #'body/value': Body
   # We copied the text into the _value_ for the _body_ field, however,
   # we did not specify how the text is to be treated. We do that by
   # specifying the _format_ property of the _body_ field.
@@ -150,4 +130,4 @@ process:
   # In the line below we tell Drupal to treat the _body_ as full HTML.
   # Since this value does not come from the data source, we use a constant
   # value defined in "source".
-  'body/format': constants/restricted_html
+  #'body/format': constants/restricted_html
