--- a/test_migrate/config/install/migrate_plus.migration.case_studies_testing.yml
+++ b/test_migrate/config/install/migrate_plus.migration.case_studies_testing.yml
@@ -36,7 +36,7 @@ source:
   # source plugin with the identifier "csv".
   plugin: csv
   # Specify the delimiter of the CSV data source. By default its ','.
-  delimiter: ','
+  delimiter: '|'
   # Specify the path to the CSV data source.
   path: 'public://import/case_studies/case_studies_altered.csv'
   # Number of rows at the beginning which are not actual data.
